React-router-dom modificado, reutilizando componentes anteriores

--- a/DWC/Practica3.06/interfaces-react-dom/package.json
+++ b/DWC/Practica3.06/interfaces-react-dom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interfaces-con-rutas",
+  "name": "mi-primera-aplicacion-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
